--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ng serve",
     "build": "ng build",
-    "preview": "ng serve --configuration=production"
+    "preview": "ng serve --configuration=production",
+    "start": "node server.js"
   },
   "dependencies": {
     "rxjs": "^7.8.2",
@@ -19,7 +20,8 @@
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
-    "tailwindcss": "latest"
+    "tailwindcss": "latest",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
